# TheChlorophyllProtocol

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  CMakeLists.txt  DeterministicSingleplayerChecklist.md  InitialPlan.md  Plan.md  README.md  simulation_driver_demo_replay.txt
.cache/clangd/index/: AStarGrid.cpp.F107BC42BD1AFDD3.idx  AStarGrid.h.AD320E2310890D18.idx  BuildPlacementRegressionTest.cpp.9DBDCCE6F26A2DA6.idx  BuiltInSystems.cpp.EE81F696351CC7B5.idx  BuiltInSystems.h.BFA28ACFE2C951C8.idx  CommandQueue.cpp.30B46A4FCB2ED658.idx  CommandQueue.h.7F37412B5ED06AF9.idx  CommandQueueOrderTest.cpp.8ABF979C14F5E127.idx  CommandSyncController.cpp.9CD4CA6D73FB3639.idx  CommandSyncController.h.E3C17B5AF8A4A303.idx  Components.h.F26A74CA163C659A.idx  DeterminismSmokeTest.cpp.FDC346C3FD48B11A.idx  DeterministicRng.cpp.0104B1CBBFB358B7.idx  DeterministicRng.h.1E60E8D4DE494913.idx  DeterministicRngTest.cpp.A7016029E3A5AB1C.idx  DualInstanceDeterminismTest.cpp.ED0B92100B081B83.idx  EcsCoreSystemsTest.cpp.39DD842F25489ECA.idx  EcsWorldTest.cpp.75807A776A503187.idx  FixedPoint.cpp.8D2C661324F95238.idx  FixedPoint.h.1541285F88D4C3C5.idx  FixedPointTest.cpp.B1B160D960CC4F28.idx  GameLoop.h.794ECEA53B4D4088.idx  GameplayLoopTest.cpp.745F3241993461E2.idx  LockstepCommandSyncTest.cpp.5590EE55A6D3E6B3.idx  LogicTickBudgetTest.cpp.22795A3B41DA8EC3.idx  Main.cpp.9317AA521CDD627E.idx  PlacementAndPathfindingTest.cpp.3D078CB8ED2A8F98.idx  PlayerCommand.h.F758563B130004E0.idx  ReplayDeterminismTest.cpp.0425A6440EB714B8.idx  ReplayPlayer.cpp.5307B0F0E509FA58.idx  ReplayPlayer.h.425F689C8666A5F0.idx  ReplayRecorder.cpp.58AE037B3CCFB65D.idx  ReplayRecorder.h.6FC20BE287BF6243.idx  RuntimeTelemetryTest.cpp.6D1EE8E7F99EBF29.idx  SimulationConfig.cpp.75C07B968CB601BF.idx  SimulationConfig.h.4D98A8D49A8F3531.idx  SimulationDriver.cpp.63723517FF3D8053.idx  SimulationDriver.h.2968705FA379A49F.idx  SimulationDriverModesTest.cpp.AB16DA9BEDF442F0.idx  StateHasher.cpp.D2FA3A5528D70ACE.idx  (+13 more)
assets/: README.md
assets/data/units/: pea_militia.json  sunflower_generator.json
assets/visual/: PLACEHOLDER_ASSET_LIST.md
log/: 2026-03-15.md  2026-03-19.md  README.md
src/app/: GameLoop.h  Main.cpp
src/data/: README.md  UnitConfig.h  UnitConfigLoader.cpp  UnitConfigLoader.h
src/logic/commands/: CommandQueue.cpp  CommandQueue.h  PlayerCommand.h
src/logic/core/: DeterminismConfig.h  DeterministicRng.cpp  DeterministicRng.h  SimulationConfig.cpp  SimulationConfig.h  StableOrder.h  TickScheduler.cpp  TickScheduler.h
src/logic/debug/: StateHasher.cpp  StateHasher.h
src/logic/ecs/: World.cpp  World.h
src/logic/ecs/components/: Components.h
src/logic/ecs/systems/: BuiltInSystems.cpp  BuiltInSystems.h  SystemPipeline.h
src/logic/factory/: UnitFactory.cpp  UnitFactory.h
src/logic/math/: FixedPoint.cpp  FixedPoint.h
src/logic/path/: AStarGrid.cpp  AStarGrid.h
src/logic/replay/: ReplayPlayer.cpp  ReplayPlayer.h  ReplayRecorder.cpp  ReplayRecorder.h
src/logic/runtime/: SimulationDriver.cpp  SimulationDriver.h
src/net/: CommandSyncController.cpp  CommandSyncController.h
src/render/: README.md
src/tests/: DeterminismSmokeTest.cpp  DeterministicRngTest.cpp  EcsCoreSystemsTest.cpp  EcsWorldTest.cpp  FixedPointTest.cpp  GameplayLoopTest.cpp  PlacementAndPathfindingTest.cpp  ReplayDeterminismTest.cpp  TickSchedulerTest.cpp  UnitConfigFactoryTest.cpp
src/tests/integration/: DualInstanceDeterminismTest.cpp  LockstepCommandSyncTest.cpp  SimulationDriverModesTest.cpp
src/tests/regression/: BuildPlacementRegressionTest.cpp
src/tests/systems/: CommandQueueOrderTest.cpp  LogicTickBudgetTest.cpp  RuntimeTelemetryTest.cpp
sucai-images/: grass_generate.py
tools/: README.md  check_logic_no_float.py
